Introducing [GET] /api/reservations/{reservationId} endpoint.
