# src/app/Http/Resources/ReservationResource.php
@@ -1,0 +1,79 @@
+<?php
+
+declare(strict_types=1);
+
+namespace App\Http\Resources;
+
+use App\Room;
+use Illuminate\Http\Resources\Json\JsonResource;
+use Illuminate\Support\Carbon;
+
+/**
+ * Class RoomResource
+ * @package App\Http\Resources
+ *
+ * @property int $id
+ * @property Room|null $room;
+ * @property int|null $room_id
+ * @property Carbon $from
+ * @property Carbon $to
+ * @property int $adults_amount
+ * @property int $children_amount
+ * @property int $infants_amount
+ * @property string $first_name
+ * @property string $last_name
+ * @property string|null $email
+ * @property string|null $phone
+ * @property string $notes
+ * @property string $status
+ * @property Carbon|null $deleted_at
+ * @property Carbon $created_at
+ * @property Carbon $updated_at
+ */
+class ReservationResource extends JsonResource
+{
+    /**
+     * @param \Illuminate\Http\Request $request
+     * @return array
+     */
+    public function toArray($request)
+    {
+        $roomRelationship = [];
+        if ($this->room_id) {
+            $roomRelationship['links'] = [
+                'related' =>route('rooms.show', $this->room_id)
+            ];
+            $roomRelationship['data'] = [
+                'id' => (string)$this->room_id,
+                'type' => 'rooms',
+            ];
+        }
+
+        return [
+            'type' => 'reservations',
+            'id' => (string)$this->id,
+            'attributes' => [
+                'room_id' => $this->room_id,
+                'from' => $this->from->format('Y-m-d'),
+                'to' => $this->to->format('Y-m-d'),
+                'adults_amount' => $this->adults_amount,
+                'children_amount' => $this->children_amount,
+                'infants_amount' => $this->infants_amount,
+                'first_name' => $this->first_name,
+                'last_name' => $this->last_name,
+                'email' => $this->email ?: null,
+                'phone' => $this->phone ?: null,
+                'status' => $this->status,
+                'notes' => $this->notes,
+                'created_at' => $this->created_at,
+                'updated_at' => $this->updated_at,
+            ],
+            'relationships' => [
+                'room' => $roomRelationship
+            ],
+            'links' => [
+                'self' => route('reservations.show', $this->id)
+            ]
+        ];
+    }
+}
